--- a/adolweb/package.json
+++ b/adolweb/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sweetalert2": "^11.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
